--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/script.js" type="module"></script>
+    <script src="./js/script_md1.js" type="module"></script>
+    <script src="./js/script_md2.js" type="module"></script>
   </body>
 </html>
