--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/script_md1.js" type="module"></script>
-    <script src="./js/script_md2.js" type="module"></script>
+    <!-- <script src="./js/script_md1.js" type="module"></script>
+    <script src="./js/script_md2.js" type="module"></script> -->
+    <script src="./js/script_md3.js" type="module"></script>
   </body>
 </html>
