Задачи 6 модуля решены и добавил игру от Вани

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <!-- <script src="./js/script_md1.js" type="module"></script>
     <script src="./js/script_md2.js" type="module"></script> -->
-    <!-- <script src="./js/script_md3.js" type="module"></script> -->
-    <script src="./js/script_md4.js" type="module"></script>
+    <script src="./js/script_md3.js" type="module"></script>
+    <!-- <script src="./js/script_md4.js" type="module"></script> -->
+    <!-- <script src="./js/script_md6.js" type="module"></script> -->
+    <script src="./js/script_md6.js" type="module"></script>
+    <script src="./js/script_fromIvan.js" type="module"></script>
   </body>
 </html>
